bmesh.ops.create_* either crash blender or do nothing #33000

Closed
opened 2012-10-28 19:03:24 +01:00 by CodeManX · 3 comments
Member

%%%all create functions for bmesh primitives seem to crash blender, e.g.

import bmesh
bm = bmesh.new()
bmesh.ops.create_icosphere(bm)

or do nothing:

bmesh.ops.create_vert(bm)
print(bm)
<BMesh(0x045959A0), totvert=0, totedge=0, totface=0, totloop=0>

Windows 7, 64bit, 2.64 official and custom build r51595%%%

%%%all create functions for bmesh primitives seem to crash blender, e.g. import bmesh bm = bmesh.new() bmesh.ops.create_icosphere(bm) or do nothing: bmesh.ops.create_vert(bm) print(bm) <BMesh(0x045959A0), totvert=0, totedge=0, totface=0, totloop=0> Windows 7, 64bit, 2.64 official and custom build r51595%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r52003.%%%

%%%fixed r52003.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#33000
No description provided.