fix [#33000] bmesh.ops.create_* either crash blender or do nothing